--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Liczby Nieparzystych</title>
+    <title>Liczby parzyste I nieparzyste</title>
     <style>
         body {
             background-color: black;
@@ -12,7 +12,7 @@
 </head>
 <body>
     <script>
-        var i = 1; // Start od 1
+        var i = 1;
         while (i <= 5000) {
             if (i <= 2500) {
                 document.write(i + " *<br>");
