--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         var i = 1;
         while (i <= 5000) {
             if (i <= 2500) {
-                document.write(i + " *<br>");
+                document.write(i + " *, ");
             } else {
-                document.write(i + "<br>");
+                document.write(i + ", ");
             }
             i += 2;
         }
